[package]
name = "monitorbot"
version = "0.1.0"
authors = ["Mark Rousskov <mark.simulacrum@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
dotenv = "0.15"
serde_json = "1.0"
serde = { version = "1.0", features = ["derive"] }
reqwest = { version = "0.10", features = ["json"] }
tokio = { version = "0.2", features = ["full"] }
hyper = "0.13"
prometheus = "0.10"
futures = "0.3"
anyhow = "1.0"
log = "0.4"
env_logger = { version = "0.8", features = ["termcolor", "humantime"] }
